asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_type_argument_in_constructor_pattern.asteriacore
data T where
   | MkT {a : Type} : Test$T()
   ;;

x : Test$T()
  = case Test$x of
      | MkT(.(\(a : Type) -> a);) -> MkT(Test$T();)
      ;;
